crates/cinrs-core/tests/snapshots/codegen__a_switch_that_always_returns_needs_no_trailing_return.snap
---
source: crates/cinrs-core/tests/codegen.rs
expression: "generate(r\"\n        int sign(int n) {\n            switch (n) {\n            case 0:\n                return 0;\n            case 1:\n            case 2:\n                return 1;\n            default:\n                return -1;\n            }\n        }\n        \")"
---
mod __cinrs_unit_0d6d5a1e {
    #![allow(…)]
    const _: () = { /* the data-model check */ };
    pub unsafe extern "C" fn sign(mut n: ::core::ffi::c_int) -> ::core::ffi::c_int {
        unsafe {
            {
                'sw0: {
                    'sw0_c2: {
                        'sw0_c1: {
                            'sw0_c0: {
                                match n {
                                    0 => break 'sw0_c0,
                                    1 | 2 => break 'sw0_c1,
                                    _ => break 'sw0_c2,
                                }
                            }
                            return 0;
                        }
                        return 1;
                    }
                    return -1;
                }
            }
        }
    }
}
#[allow(unknown_lints, ambiguous_glob_reexports, unused_imports)]
pub use __cinrs_unit_0d6d5a1e::*;
