crates/cinrs-core/tests/snapshots/codegen__a_thread_local_array_is_reached_through_its_pointer.snap
---
source: crates/cinrs-core/tests/codegen.rs
expression: "generate_for(Standard::C11,\nr\"\n        _Thread_local _Alignas(64) int per_thread[4];\n\n        int set(void) {\n            per_thread[2] = 9;\n            return per_thread[2];\n        }\n        \")"
---
mod __cinrs_unit_e5cfd795 {
    #![allow(…)]
    const _: () = { /* the data-model check */ };
    #[repr(C, align(64))]
    #[derive(Copy, Clone)]
    pub struct __cinrs_align_64<T>(pub T);
    ::std::thread_local! {
        pub static per_thread : ::core::cell::UnsafeCell < __cinrs_align_64 <
        [::core::ffi::c_int; 4] > > = const {
        ::core::cell::UnsafeCell::new(__cinrs_align_64([0; 4])) };
    }
    pub unsafe extern "C" fn set() -> ::core::ffi::c_int {
        unsafe {
            let __cinrs_tmp1 = ({
                let __cinrs_tmp0 = per_thread
                    .with(|__cinrs_cell| ::core::cell::UnsafeCell::get(__cinrs_cell));
                (&raw mut (*__cinrs_tmp0).0).cast::<::core::ffi::c_int>()
            })
                .offset(2);
            (*__cinrs_tmp1) = 9;
            return {
                let __cinrs_tmp3 = ({
                    let __cinrs_tmp2 = per_thread
                        .with(|__cinrs_cell| ::core::cell::UnsafeCell::get(
                            __cinrs_cell,
                        ));
                    (&raw mut (*__cinrs_tmp2).0).cast::<::core::ffi::c_int>()
                })
                    .offset(2);
                (*__cinrs_tmp3)
            };
        }
    }
}
#[allow(unknown_lints, ambiguous_glob_reexports, unused_imports)]
pub use __cinrs_unit_e5cfd795::*;
