crates/cinrs-core/tests/snapshots/codegen__a_thread_local_object_becomes_a_thread_local_item.snap
---
source: crates/cinrs-core/tests/codegen.rs
expression: "generate_for(Standard::C11,\nr\"\n        _Thread_local int counter = 1;\n        static _Thread_local long private_total;\n\n        int bump(int by) {\n            counter += by;\n            return counter;\n        }\n\n        int *address(void) { return &counter; }\n\n        int calls(void) {\n            static _Thread_local int n = 0;\n            return ++n;\n        }\n        \")"
---
mod __cinrs_unit_28cf9952 {
    const _: () = { /* the data-model check */ };
    ::std::thread_local! {
        #[allow(…)] pub static counter : ::core::cell::UnsafeCell < ::core::ffi::c_int
        > = const { ::core::cell::UnsafeCell::new(1) };
    }
    ::std::thread_local! {
        #[allow(…)] static private_total : ::core::cell::UnsafeCell <
        ::core::ffi::c_long > = const { ::core::cell::UnsafeCell::new(0) };
    }
    ::std::thread_local! {
        #[allow(…)] static __cinrs_static_28cf9952_calls_n : ::core::cell::UnsafeCell <
        ::core::ffi::c_int > = const { ::core::cell::UnsafeCell::new(0) };
    }
    #[allow(…)]
    pub unsafe extern "C" fn bump(mut by: ::core::ffi::c_int) -> ::core::ffi::c_int {
        unsafe {
            let __cinrs_tmp0 = counter
                .with(|__cinrs_cell| ::core::cell::UnsafeCell::get(__cinrs_cell));
            (*__cinrs_tmp0) = (*__cinrs_tmp0).wrapping_add(by);
            return {
                let __cinrs_tmp1 = counter
                    .with(|__cinrs_cell| ::core::cell::UnsafeCell::get(__cinrs_cell));
                (*__cinrs_tmp1)
            };
        }
    }
    #[allow(…)]
    pub unsafe extern "C" fn address() -> *mut ::core::ffi::c_int {
        unsafe {
            return {
                let __cinrs_tmp0 = counter
                    .with(|__cinrs_cell| ::core::cell::UnsafeCell::get(__cinrs_cell));
                (&raw mut (*__cinrs_tmp0))
            };
        }
    }
    #[allow(…)]
    pub unsafe extern "C" fn calls() -> ::core::ffi::c_int {
        unsafe {
            return {
                let __cinrs_tmp0 = __cinrs_static_28cf9952_calls_n
                    .with(|__cinrs_cell| ::core::cell::UnsafeCell::get(__cinrs_cell));
                (*__cinrs_tmp0) = (*__cinrs_tmp0).wrapping_add(1);
                (*__cinrs_tmp0)
            };
        }
    }
}
#[allow(unknown_lints, ambiguous_glob_reexports, unused_imports)]
pub use __cinrs_unit_28cf9952::*;
