crates/cinrs-core/tests/snapshots/codegen__a_thread_local_whose_initializer_names_an_item_is_not_const.snap
---
source: crates/cinrs-core/tests/codegen.rs
expression: "generate_for(Standard::C11,\nr\"\n        int anchor;\n        _Thread_local int *cursor = &anchor;\n        int read(void) { return *cursor; }\n        \")"
---
mod __cinrs_unit_c9d1e7a2 {
    const _: () = { /* the data-model check */ };
    #[allow(…)]
    pub static mut anchor: ::core::ffi::c_int = 0;
    ::std::thread_local! {
        #[allow(…)] pub static cursor : ::core::cell::UnsafeCell < * mut
        ::core::ffi::c_int > = ::core::cell::UnsafeCell::new(unsafe { (& raw mut anchor)
        });
    }
    #[allow(…)]
    pub unsafe extern "C" fn read() -> ::core::ffi::c_int {
        unsafe {
            return (*({
                let __cinrs_tmp0 = cursor
                    .with(|__cinrs_cell| ::core::cell::UnsafeCell::get(__cinrs_cell));
                (*__cinrs_tmp0)
            }));
        }
    }
}
#[allow(unknown_lints, ambiguous_glob_reexports, unused_imports)]
pub use __cinrs_unit_c9d1e7a2::*;
