crates/cinrs-core/tests/snapshots/codegen__a_va_list_pointer_is_a_raw_pointer_to_the_list.snap
---
source: crates/cinrs-core/tests/codegen.rs
expression: "generate(r\"\n        #include <stdarg.h>\n\n        int two(va_list *ap) {\n            int a = va_arg(*ap, int);\n            int b = va_arg(*ap, int);\n            return a + b;\n        }\n\n        int total(int n, ...) {\n            va_list ap;\n            va_start(ap, n);\n            va_list *p = &ap;\n            int s = two(p);\n            s += va_arg(*p, int);\n            va_end(ap);\n            return s;\n        }\n        \")"
---
mod __cinrs_unit_ff4f7f80 {
    const _: () = { /* the data-model check */ };
    #[allow(…)]
    pub unsafe extern "C" fn two(
        mut ap: *mut ::core::ffi::VaList,
    ) -> ::core::ffi::c_int {
        unsafe {
            let mut a: ::core::ffi::c_int = (*ap).next_arg::<::core::ffi::c_int>();
            let mut b: ::core::ffi::c_int = (*ap).next_arg::<::core::ffi::c_int>();
            return a.wrapping_add(b);
        }
    }
    #[allow(…)]
    pub unsafe extern "C" fn total(
        mut n: ::core::ffi::c_int,
        __cinrs_va: ...
    ) -> ::core::ffi::c_int {
        unsafe {
            let mut ap: ::core::ffi::VaList = __cinrs_va.clone();
            ap = __cinrs_va.clone();
            let mut p: *mut ::core::ffi::VaList = (&raw mut ap);
            let mut s: ::core::ffi::c_int = two(p);
            s = s.wrapping_add((*p).next_arg::<::core::ffi::c_int>());
            return s;
        }
    }
}
#[allow(unknown_lints, ambiguous_glob_reexports, unused_imports)]
pub use __cinrs_unit_ff4f7f80::*;
